--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
       background-position: center;
       background-size: cover;
       overflow: hidden;
+      position: relative;
     }
-
 
     .card {
       width: 100%;
@@ -78,6 +78,8 @@
       font-size: 16px;
       color: #e6005c;
       font-weight: 600;
+      position: relative;
+
     }
 
     .heart {
@@ -104,6 +106,7 @@
   animation: heartbeat 1.2s infinite;
 }
 
+
 @keyframes heartbeat {
   0% {
     transform: scale(1);
@@ -125,4 +128,61 @@
   }
 }
 
+.preloader {
+position: fixed;
+  inset: 0;
+  background: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  }
 
+  #text {
+    color: white;
+    font-size: 2.2rem;
+    text-align: center;
+    max-width: 90%;
+    opacity: 0;
+    transition: opacity 0.6s ease;
+  }
+
+.gif-wrapper {
+  display: flex;
+  position: absolute;
+  margin-top: 10px;
+  bottom: 8%;
+  left: 8%;
+}
+
+.gif-wrapper img {
+  width: 200px;      /* adjust size */
+  height: auto;
+}
+
+.gif-wrapper img.right {
+  width: 200px;      /* adjust size */
+  height: auto;
+  margin-left: 180%;
+  float: right;
+}
+
+.gif-wrapper img.right {
+  transform: scaleX(-1); /* mirror the right image */
+}
+
+
+
+.vid{
+  position: absolute;
+  left: 75%;
+  bottom: 7%;
+  right: 0%;
+  width: 250px;
+  display: none;
+}
+
+#btnSong{
+  background-color: pink;
+  border: 4px solid rgb(231, 74, 100);
+}
