--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@
     .message {
       display: none;
       margin-top: 20px;
-      font-size: 16px;
-      color: #e6005c;
+      font-size: 60px;
+      color: whitesmoke;
       font-weight: 600;
       position: relative;
 
@@ -172,7 +172,6 @@ position: fixed;
 }
 
 
-
 .vid{
   position: absolute;
   left: 75%;
@@ -185,4 +184,11 @@ position: fixed;
 #btnSong{
   background-color: pink;
   border: 4px solid rgb(231, 74, 100);
+}
+
+
+.bigheart{
+  position: absolute;
+  top: 10%;
+  display: none;
 }
